<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="com.example.android.countcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:background="@drawable/custom_background_up" />

        <RelativeLayout
            android:id="@+id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/custom_background_down"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_basketball_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/basketball_score"
        android:textColor="#fff"
        android:textSize="32sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"/>

    <LinearLayout
        android:id="@+id/nested_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_below="@id/tv_basketball_score">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_a"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textSize="56sp"
                android:textColor="#fff" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_button_1"
                android:onClick="addThreePointForTeamA"
                android:text="@string/plus_3_point"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_button_1"
                android:onClick="addTwoPointForTeamA"
                android:text="@string/plus_2_point"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_button_1"
                android:onClick="addOnePointForTeamA"
                android:text="@string/free_throw"
                android:textColor="#fff" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#607d8b" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_b"
                android:textColor="#404853"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#404853"
                android:textSize="56sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_button_1"
                android:onClick="addThreePointForTeamB"
                android:text="@string/plus_3_point"
                android:textColor="#404853" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_button_1"
                android:onClick="addTwoPointForTeamB"
                android:text="@string/plus_2_point"
                android:textColor="#404853" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_button_1"
                android:onClick="addOnePointForTeamB"
                android:text="@string/free_throw"
                android:textColor="#404853" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ripple_effect"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textColor="#404853"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"/>

</RelativeLayout>
